--- a/demo2.html
+++ b/demo2.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <link rel="stylesheet" href="">
+    <style>body { background: red ;}</style>
 </head>
+
 <body>
-	<script src="demo2.js" type="text/javascript" charset="utf-8"></script>
+    <script>console.log("hello world");</script>
 </body>
+
 </html>
