--- a/demo5.html
+++ b/demo5.html
@@ -41,7 +41,7 @@
     <div class="line">And that has made all the difference.</div>
   </div>
 
-  <div class="author">Robert Frost</div>
+  <div class="author" onmouseover="authorHover(1)" onmouseout="authorHover(0);">Robert Frost</div>
   
   <script src="demo5.js" type="text/javascript" charset="utf-8"></script>
 
