--- a/demo2.html
+++ b/demo2.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
     <link rel="stylesheet" href="">
-    <style>body { background: red ;}</style>
+    <style>
+    body {
+        background: red;
+    }
+    </style>
 </head>
 
 <body>
-    <script>console.log("hello world");</script>
+    <script>
+    console.log("hello world");
+    </script>
 </body>
 
 </html>
