review and experiment

--- a/demo2.html
+++ b/demo2.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>The Title Of Red</title>
     <link rel="stylesheet" href="">
+
+    <script src="demo2.js"></script>
+
     <style>
     body {
         background: red;
@@ -15,7 +18,7 @@
 
 <body>
     <script>
-    console.log("hello world");
+        console.log("Hello from the inline script");
     </script>
 </body>
 
