--- a/demo2.html
+++ b/demo2.html
@@ -5,18 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
-    <link rel="stylesheet" href="">
-    <style>
-    body {
-        background: red;
-    }
-    </style>
 </head>
+<script src="demo2.js" type="text/javascript" charset="utf-8"></script>
 
 <body>
-    <script>
-    console.log("hello world");
-    </script>
+<p>Line 1</p>
+    <h2>
+    </h2>
+<p>Line 2</p>
 </body>
 
 </html>
