--- a/demo5.html
+++ b/demo5.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
+  <title>Robert Frost The Road Not Taken</title>
 </head>
 
 <body>
@@ -41,8 +41,9 @@
     <div class="line">And that has made all the difference.</div>
   </div>
 
-  <div class="author" onmouseover="authorHover(1)" onmouseout="authorHover(0);">Robert Frost</div>
-  
+  <div class="author" onmouseover="authorHover(1)" onmouseout="authorHover(0);">
+  <h1>Robert Frost</h1></div>
+
   <script src="demo5.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
