--- a/demo6.html
+++ b/demo6.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>JS Play</title>
+  <title>Title is Timer Example</title>
 </head>
 
 <body>
   <h1><div id="timer"></div></h1>
   <h3><div id="status"></div></h3>
-  
+
   <input type="button" onclick="setTimer()" value="Set Interval" />
   <input type="button" onclick="clearTimer()" value="Clear Interval" />
 
